infra/k8s/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-wallet-backend
  labels:
    app.kubernetes.io/name: social-wallet-backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: social-wallet-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: social-wallet-backend
    spec:
      containers:
        - name: social-wallet-backend
          image: ghcr.io/eliote-geeks/wallet-app-backend:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
