infra/k8s/backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-wallet-backend
spec:
  ingressClassName: traefik
  rules:
    - host: api.dev.kobo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-wallet-backend
                port:
                  number: 80
